@@ -29,6 +29,7 @@ namespace UoFiddler.Forms
         private DateTime alarmTime;
         private SoundPlayer alarmSound = new SoundPlayer(@"C:\Windows\Media\Alarm01.wav"); // Path to alarm sound file Default alarm sound file
 
+        #region AlarmClockForm
         public AlarmClockForm()
         {
             InitializeComponent();
@@ -41,10 +42,17 @@ namespace UoFiddler.Forms
             realTimeTimer.Tick += RealTimeTimer_Tick;
             realTimeTimer.Start();
 
-            this.FormClosing += AlarmClockForm_FormClosing;
-            this.Shown += AlarmClockForm_Shown;
-        }
+            timer = new Timer();
+            timer.Interval = 1000; // Set timer to 1 second
+            timer.Tick += SnoozeTimer_Tick;
 
+            this.FormClosing += AlarmClockForm_FormClosing;
+            this.Shown += AlarmClockForm_Shown;            
+
+        }
+        #endregion
+
+        #region startButton
         private void startButton_Click(object sender, EventArgs e)
         {
             // Set the alarm time to the selected time in dateTimePicker1
@@ -52,13 +60,17 @@ namespace UoFiddler.Forms
 
             timer1.Start();
         }
+        #endregion
 
+        #region stopButton
         private void stopButton_Click(object sender, EventArgs e)
         {
             timer1.Stop();
             alarmSound.Stop();
         }
+        #endregion
 
+        #region Timer_Tick
         private void Timer_Tick(object sender, EventArgs e)
         {
             TimeSpan remainingTime = alarmTime - DateTime.Now;
@@ -76,19 +88,25 @@ namespace UoFiddler.Forms
                 timeLabel.Text = remainingTime.ToString(@"hh\:mm\:ss");
             }
         }
+        #endregion
 
+        #region RealTimeTimer
         private void RealTimeTimer_Tick(object sender, EventArgs e)
         {
             LabelTimeReal.Text = DateTime.Now.ToString("HH:mm:ss");
         }
+        #endregion
 
+        #region AlarmClockForm_FormClosing
         private void AlarmClockForm_FormClosing(object sender, FormClosingEventArgs e)
         {
             alarmSound.Stop();
             Properties.Settings.Default.FormLocationAlarm = this.Location;
             Properties.Settings.Default.Save();
         }
+        #endregion
 
+        #region btLoadWave
         private void btLoadWave_Click(object sender, EventArgs e)
         {
             OpenFileDialog openFileDialogWave = new OpenFileDialog();
@@ -100,7 +118,9 @@ namespace UoFiddler.Forms
                 alarmSound.LoadAsync();
             }
         }
+        #endregion
 
+        #region AlarmClockForm_Shown
         private void AlarmClockForm_Shown(object sender, EventArgs e)
         {
             if (Properties.Settings.Default.FormLocationAlarm != Point.Empty)
@@ -108,5 +128,35 @@ namespace UoFiddler.Forms
                 this.Location = Properties.Settings.Default.FormLocationAlarm;
             }
         }
+        #endregion
+
+        #region SnoozeTimer
+        private void SnoozeTimer_Tick(object sender, EventArgs e)
+        {
+            TimeSpan remainingTime = alarmTime - DateTime.Now; // Calculate the remaining snooze time
+
+            if (remainingTime.TotalSeconds <= 0)
+            {
+                timer.Stop();
+                timeLabel.Text = "00:00:00";
+                alarmSound.PlayLooping();
+            }
+            else
+            {
+                timeLabel.Text = remainingTime.ToString(@"hh\:mm\:ss");
+            }
+        }
+        #endregion
+
+        #region snoozeButton
+        private void snoozeButton_Click(object sender, EventArgs e)
+        {
+            timer1.Stop(); // Stop the original alarm timer
+            alarmSound.Stop(); // Stop the alarm sound
+            alarmTime = DateTime.Now.AddMinutes(5); // Set the alarm time to 5 minutes from now
+            timer.Start(); // Start the snooze timer
+            timeLabel.Text = "05:00:00"; // Display the initial snooze time
+        }
+        #endregion
     }
 }
